# algorithms

search/: CMakeLists.txt
search/include/: binary_search.h  binary_search_abstract.h
search/src/: binary_search.cpp  binary_search_abstract.cpp
search/test/: test_binary_search.cpp  test_binary_search_abstract.cpp
